--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ roomToNode.set(015,"b3");</script>
     }
     function submit() {
         console.log(roomsSelect);
-        document.getElementById("submitlink").href="https://www.colindakota.com/olynav.html?start="+roomsSelect.options[roomsSelect.selectedIndex].text+"&end="+destinationSelect.options[destinationSelect.selectedIndex].text;
+        document.getElementById("submitlink").href="https://colin9012.github.io/nav.html?start="+roomsSelect.options[roomsSelect.selectedIndex].text+"&end="+destinationSelect.options[destinationSelect.selectedIndex].text;
     }
     </script>
 </html>
