--- a/nav.html
+++ b/nav.html
@@ -9,7 +9,7 @@
             <div class="wrapper">
                 <img id="map"class="backgroundMap" src="https://lh6.googleusercontent.com/8aJ3CfUgRbOIHALA8vW2Gms8q6Hc_iE8y66uexzWzBP-P6R-DVrqpyJkRHzb3JAGIv0-xp27qGW_EYbcoC89Hx6Puny0imqzmDRQNxI-pl9AtNSEIjshvfZI1nNDpvmjqA=w1280">
                 <canvas class="toOverlay" id="canvas" width="800px" height="800px" onmousedown="mousePressed(event)" ></canvas>
-                <button style="position:absolute;z-index: 3" onclick="window.location.href='home.html'">Go back</button>
+                <button style="position:absolute;z-index: 3" onclick="window.location.href='index.html'">Go back</button>
             
             </div>
         </div>
