Fixing map again
This damn map

--- a/nav.html
+++ b/nav.html
@@ -7,7 +7,7 @@
     
         <div class="outsideWrapper">
             <div class="wrapper">
-                <img id="map"class="backgroundMap" src="map.png">
+                <img id="map"class="backgroundMap" src="https://colin9012.github.io/map.PNG">
                 <canvas class="toOverlay" id="canvas" width="800px" height="800px" onmousedown="mousePressed(event)" ></canvas>
                 <button style="position:absolute;z-index: 3" onclick="window.location.href='index.html'">Go back</button>
             
