--- a/nav.html
+++ b/nav.html
@@ -430,6 +430,7 @@ if(endingLocation!="Commons" && endingLocation!="Main Office") {
 }
 console.log(roomToNode.get("149"));
 console.log(roomToNode.get(endingLocation));
+alert(roomToNode.get(startingLocation));
 v(roomToNode.get(startingLocation),roomToNode.get(endingLocation));
 
 function mousePressed(e) {
