--- a/nav.html
+++ b/nav.html
@@ -7,8 +7,8 @@
     
         <div class="outsideWrapper">
             <div class="wrapper">
-                <img id="map"class="backgroundMap" src="https://colin9012.github.io/map.PNG">
-                <canvas class="toOverlay" id="canvas" width="800px" height="800px" onmousedown="mousePressed(event)" ></canvas>
+                <img id="map"class="backgroundMap" src="https://colin9012.github.io/map.PNG" style="position: absolute; z-index:1">
+                <canvas class="toOverlay" id="canvas" width="800px" height="800px" onmousedown="mousePressed(event)" style="position: absolute; z-index: 2"></canvas>
                 <button style="position:absolute;z-index: 3" onclick="window.location.href='index.html'">Go back</button>
             
             </div>
