Increase font size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </header>
     
     <body style="font-size: 2vw">
-        <form name="form1" id="form1">
+        <form name="form1" id="form1"style="font-size: 2vw">
         Room # start: <select name="number" id="roomNumber">
                 <option value="" selected="selected">Pick room number</option>
             </select><br><br>
