--- a/nav.html
+++ b/nav.html
@@ -2,6 +2,24 @@
 <html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <style>.wrapper {
+    position: absolute;
+    width:100%;
+    height:100%s;
+    top: 0px; left: 0px;
+}
+.backgroundMap {
+   
+    position: absolute;top:0px;left:0px;
+    z-index: 1;
+}
+.toOverlay {
+
+    position: absolute;top:0px;left:0px;
+    background-color: transparent;
+    z-index: 2;
+    border: 1px solid black;
+}</style
     <h1>OLY NAV</h1>
     
     
