--- a/nav.html
+++ b/nav.html
@@ -11,11 +11,13 @@
 .backgroundMap {
    
     position: absolute;top:0px;left:0px;
+    width: 100%;
     z-index: 1;
 }
 .toOverlay {
 
     position: absolute;top:0px;left:0px;
+    width: 100%;
     background-color: transparent;
     z-index: 2;
     
