Fixed not routing on start
Accidentally only made it route on window change, also makes it route on default

--- a/nav.html
+++ b/nav.html
@@ -451,7 +451,7 @@ if(endingLocation!="Commons" && endingLocation!="Main Office") {
             v(roomToNode.get(startingLocation),roomToNode.get(endingLocation));
         }
 window.onresize=onWindowChange;
-
+onWindowChange();
 function mousePressed(e) {
     alert(e.clientX+","+e.clientY);
 }
