--- a/nav.html
+++ b/nav.html
@@ -9,7 +9,7 @@
             <div class="wrapper">
                 <img id="map"class="backgroundMap" src="map.PNG">
                 <canvas class="toOverlay" id="canvas" width="800px" height="800px" onmousedown="mousePressed(event)" ></canvas>
-                <button style="position:absolute;z-index: 3" onclick="window.location.href='home.html'">Go back</button>
+                <button style="position:absolute;z-index: 3" onclick="window.location.href='index.html'">Go back</button>
             
             </div>
         </div>
