Load rooms from Data

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="submit" onclick="submit();" style="padding: 15px;border-radius: 15px;background-color: greenyellow">Submit</button>
     </body>
     <script>const nodes = new Map();const floorNodes = new Map();const neighbors = new Map();const roomToNode = new Map();</script>
-    <script src="loadRooms.js"></script>
+    <script src="Data/loadRooms.js"></script>
     <script>
     var roomsSelect;
     var destinationSelect;
