--- a/nav.html
+++ b/nav.html
@@ -8,7 +8,7 @@
         <div class="outsideWrapper">
             <div class="wrapper">
                 <img id="map"class="backgroundMap" src="map.PNG">
-                <canvas class="toOverlay" id="canvas" width="800px" height="800px" onmousedown="mousePressed(event)" ></canvas>
+                <canvas class="toOverlay" id="canvas" width="800px" height="800px"></canvas>
                 <button style="position:absolute;z-index: 3" onclick="window.location.href='index.html'">Go back</button>
             
             </div>
