Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     function submit() {
         console.log(roomsSelect);
         //window.location.href="https://colin9012.github.io/nav.html?start="+roomsSelect.options[roomsSelect.selectedIndex].text+"&end="+destinationSelect.options[destinationSelect.selectedIndex].text;
-        window.location.href="https://colin9012.github.io/index.html?start="+roomsSelect.options[roomsSelect.selectedIndex].text+"&end="+destinationSelect.options[destinationSelect.selectedIndex].text;
+        window.location.href="https://colin9012.github.io/nav.html?start="+roomsSelect.options[roomsSelect.selectedIndex].text+"&end="+destinationSelect.options[destinationSelect.selectedIndex].text;
     }
     </script>
 </html>
