--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     
     <body style="font-size: 2vw;text-align: center;">
         <form name="form1" id="form1" style="margin: auto;text-align: center">
-        Room # start: <select name="number" id="roomNumber">
-                <option value="" selected="selected">Pick room number</option>
+        <p style="display: inline" id="roomStartText">Room # start: </p><select name="number" id="roomNumber">
+                <option value="" selected="selected" id="firstOption">Pick room number</option>
             </select><br><br>
         Destination: <select name="number2" id="roomNumber2">
                 <option value="" selected="selected">Pick room number</option>
@@ -20,6 +20,8 @@
     <script>const nodes = new Map();const floorNodes = new Map();const neighbors = new Map();const roomToNode = new Map();</script>
     <script src="Data/loadRooms.js"></script>
     <script>
+    params = new URLSearchParams(window.location.search);
+    
     var roomsSelect;
     var destinationSelect;
     roomToNodeAsc = new Map([...roomToNode.entries()].sort(function(a,b){
@@ -34,11 +36,16 @@
             roomsSelect.options[roomsSelect.options.length]=new Option(key,key);
             destinationSelect.options[destinationSelect.options.length]=new Option(key,key);
         }
+        // TODO
+        if(params.has("start")) {
+            document.getElementById("firstOption").text=params.get("start");
+            document.getElementById("roomStartText").innerHTML="Current position: ";
+        }
     }
     function submit() {
         console.log(roomsSelect);
         //window.location.href="https://colin9012.github.io/nav.html?start="+roomsSelect.options[roomsSelect.selectedIndex].text+"&end="+destinationSelect.options[destinationSelect.selectedIndex].text;
-        window.location.href="https://colin9012.github.io/nav.html?start="+roomsSelect.options[roomsSelect.selectedIndex].text+"&end="+destinationSelect.options[destinationSelect.selectedIndex].text;
+        window.location.href="colin9012.github.io/nav.html?start="+roomsSelect.options[roomsSelect.selectedIndex].text+"&end="+destinationSelect.options[destinationSelect.selectedIndex].text;
     }
     </script>
 </html>
