Google analytics tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
     <header style="font-size: 10vw;display: flex;justify-content:center;vertical-align: top;">
         <h1 style="margin: auto;"> OLY NAV</h1>
     </header>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ESQQQVT5P6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ESQQQVT5P6');
+</script>
+    
     
     <body style="font-size: 2vw;text-align: center;">
         <form name="form1" id="form1" style="margin: auto;text-align: center">
